HeadlineOverlap + Contact Us Padding issue + Form fix: Bala + Video anchor Recomended Content + Search Result Equal Height(Changed to window load) + IE 10 megamenu allignment(Nupur Changes)

--- a/src/components/contactUsPage-contactUs/sass/_contactUsPage-contactUs.scss
+++ b/src/components/contactUsPage-contactUs/sass/_contactUsPage-contactUs.scss
@@ -142,6 +142,9 @@
             padding-right: 10px;
             line-height: 24px;
             text-align: left;
+            ul {
+                padding-left: 18px;
+            }
             @include mobile {
                 padding-right: 10px;
             }
