--- a/src/components/recomended-articles/sass/recomended-content.scss
+++ b/src/components/recomended-articles/sass/recomended-content.scss
@@ -181,6 +181,9 @@
             overflow: hidden;
             position: relative;
             margin-bottom: 20px;
+            .video-link {
+            	cursor: pointer;
+            }
             img {
                 width: 100%;
                 height: auto;
